--- a/assets/css/layouts/_responsive.scss
+++ b/assets/css/layouts/_responsive.scss
@@ -57,16 +57,19 @@
     li {
 
         position: relative;
+        display: inline-block;
 
         .nav-link {
-
+            display: inline-block;
 
             &.active {
                 &:before {
+                    display: none !important;
                     content: '';
                     position: absolute;
                     top: 50%;
-                    transform: translateY(-50%, );
+                    left: -100px;
+                    transform: translate(-50%, -50%);
                     width: 20px;
                     height: 2px;
                     background-color: $primary_color;
@@ -74,10 +77,12 @@
                 }
 
                 &:after {
+                    display: none !important;
                     content: '';
                     position: absolute;
                     top: 50%;
-                    transform: translateY(-50%, );
+                    left: -100px;
+                    transform: translate(-50%, -50%);
                     width: 20px;
                     height: 2px;
                     background-color: $primary_color;
@@ -249,7 +254,7 @@
 
 
         .banner-img {
-            margin-top: 530px;
+            margin-top: 580px;
         }
     }
 }
