--- a/assets/css/layouts/_header.scss
+++ b/assets/css/layouts/_header.scss
@@ -17,33 +17,38 @@
     li {
 
       position: relative;
+      overflow: hidden;
+
 
       .nav-link {
+        position: relative;
+        overflow: hidden;
+        display: block;
+
         &.active {
           &:before {
             content: '';
             position: absolute;
             top: 90%;
-            left: 80%;
+            left: 50%;
             transform: translate(-50%, -50%);
-            width: 20px;
+            width: 40%;
             height: 2px;
-            transform: translate(-50%, -50%);
             background-color: $primary_color;
-            margin-left: -30px !important;
+            margin-left: -20px !important;
           }
 
           &:after {
             content: '';
             position: absolute;
             top: 90%;
-            left: 80%;
+            left: 50%;
             transform: translate(-50%, -50%);
-            width: 20px;
+            width: 40%;
             height: 2px;
-            transform: translate(-50%, -50%);
+
             background-color: $primary_color;
-            margin-right: 30px !important;
+            margin-left: 20px !important;
           }
         }
 
