--- a/assets/css/layouts/_responsive.scss
+++ b/assets/css/layouts/_responsive.scss
@@ -57,33 +57,34 @@
     li {
 
         position: relative;
-        display: inline-block;
+        overflow: hidden;
+
 
         .nav-link {
+            position: relative;
+            overflow: hidden;
             display: inline-block;
 
             &.active {
                 &:before {
-                    display: none !important;
                     content: '';
                     position: absolute;
-                    top: 50%;
-                    left: -100px;
+                    top: 90%;
+                    left: 50%;
                     transform: translate(-50%, -50%);
-                    width: 20px;
+                    width: 5%;
                     height: 2px;
                     background-color: $primary_color;
                     margin-left: -30px !important;
                 }
 
                 &:after {
-                    display: none !important;
                     content: '';
                     position: absolute;
-                    top: 50%;
-                    left: -100px;
+                    top: 90%;
+                    left: 50%;
                     transform: translate(-50%, -50%);
-                    width: 20px;
+                    width: 5%;
                     height: 2px;
                     background-color: $primary_color;
                     margin-right: 30px !important;
@@ -111,6 +112,23 @@
             }
         }
     }
+
+
+    .form-area {
+        position: absolute;
+        background-color: #000;
+
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 40px 20px;
+        z-index: 100;
+        width: 80% !important;
+        padding-right: 30%;
+        padding-left: 30%;
+        margin-top: 100px;
+    }
+
 }
 
 @media only screen and (max-width: 768px) {
@@ -153,6 +171,70 @@
             }
         }
     }
+
+    .contact-form-wrapper {
+        padding-bottom: 200px;
+    }
+
+    .form-area {
+        position: absolute;
+        background-color: #000;
+
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 40px 20px;
+        z-index: 100;
+        width: 100% !important;
+        padding-right: 30%;
+        padding-left: 30%;
+        margin-top: 100px;
+
+        .send-btn {
+            flex: 1;
+            width: 100%;
+        }
+
+        .contact-form {
+
+
+            input {
+                border-color: inherit;
+                -webkit-box-shadow: none;
+                box-shadow: none;
+                background-color: transparent !important;
+                border: 1px solid #444348;
+                border-radius: 0 !important;
+                color: #fff;
+                padding: 16px 10px;
+
+                &::placeholder {
+                    color: #444348;
+
+                }
+            }
+
+            textarea {
+                border-color: inherit;
+                -webkit-box-shadow: none;
+                box-shadow: none;
+                background-color: transparent !important;
+                border: 1px solid #444348;
+                border-radius: 0 !important;
+                color: #fff;
+
+                &::placeholder {
+                    color: #444348;
+
+                }
+            }
+        }
+
+
+    }
+
+
+
 }
 
 @media only screen and (max-width:532px) {
@@ -220,6 +302,30 @@
             margin-top: 420px;
         }
     }
+
+    .contact-bottom {
+        padding: 30px 0;
+        background-color: #000;
+        position: relative;
+
+
+
+
+        ul {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+
+            li {
+                display: inline-block;
+                padding: 0 5px;
+            }
+
+
+
+        }
+    }
 }
 
 @media only screen and (max-width:372px) {
@@ -254,7 +360,7 @@
 
 
         .banner-img {
-            margin-top: 580px;
+            margin-top: 530px;
         }
     }
 }
