--- a/assets/css/layouts/_responsive.scss
+++ b/assets/css/layouts/_responsive.scss
@@ -67,6 +67,7 @@
 
             &.active {
                 &:before {
+                    display: none !important;
                     content: '';
                     position: absolute;
                     top: 90%;
@@ -79,6 +80,7 @@
                 }
 
                 &:after {
+                    display: none !important;
                     content: '';
                     position: absolute;
                     top: 90%;
@@ -238,6 +240,10 @@
 }
 
 @media only screen and (max-width:532px) {
+    p {
+        text-align: center !important;
+    }
+
     .header-area {
         // height: 150vh;
         padding-bottom: 280px !important;
@@ -260,7 +266,7 @@
         }
 
         .banner-img {
-            margin-top: 380px;
+            margin-top: 350px;
             margin-right: -5%;
 
             img {
@@ -299,7 +305,7 @@
         }
 
         .banner-img {
-            margin-top: 420px;
+            margin-top: 400px;
         }
     }
 
@@ -360,7 +366,7 @@
 
 
         .banner-img {
-            margin-top: 530px;
+            margin-top: 600px;
         }
     }
 }
