--- a/assets/css/layouts/_testimonial.scss
+++ b/assets/css/layouts/_testimonial.scss
@@ -3,7 +3,35 @@
     z-index: 0;
 
     h3 {
+        position: relative;
         color: #fff;
+
+
+        &:before {
+            content: '';
+            position: absolute;
+            top: 40px;
+            left: 47%;
+
+            width: 20px;
+            height: 2px;
+            transform: translate(-50%, -50%);
+            background-color: $primary_color;
+
+        }
+
+        &:after {
+            content: '';
+            position: absolute;
+            top: 40px;
+            right: 47%;
+            width: 20px;
+            height: 2px;
+            transform: translate(-50%, -50%);
+            background-color: $primary_color;
+
+        }
+
     }
 
     .testimonial-slider {
